--- a/client/main.css
+++ b/client/main.css
@@ -1,1 +1,1 @@
-#login-buttons{margin:18px;font-size:14px}.list-group-item{height:55px}body{background-color:#000}
+#login-buttons{margin:18px;font-size:14px}.list-group-item{height:55px}body{background:gray}
