Updates motivations editor

--- a/client/main.css
+++ b/client/main.css
@@ -1,1 +1,1 @@
-#login-buttons{margin:18px;font-size:14px}.list-group-item{height:55px}.btn-space{margin-top:18px}body{background:#fff}
+#login-buttons{margin:18px;font-size:14px}.list-group-item{height:55px}.btn-space{margin-top:18px;margin-right:18px}body{background:#fff}
